--- a/Martify/LoginWindow.xaml
+++ b/Martify/LoginWindow.xaml
@@ -7,14 +7,15 @@
         mc:Ignorable="d"
         Height="450"
         Width="800"
-        ResizeMode="NoResize"
+        ResizeMode="CanMinimize"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
         AllowsTransparency="True"
         Background="Transparent">
 
     <Window.Resources>
-        <Storyboard x:Key="GradientRotateStoryboard" RepeatBehavior="Forever">
+        <Storyboard x:Key="GradientRotateStoryboard"
+                    RepeatBehavior="Forever">
             <DoubleAnimation Storyboard.TargetName="AnimatedBorderBrush"
                              Storyboard.TargetProperty="Transform.Children[0].Angle"
                              From="0" To="360" Duration="0:0:5" />
@@ -22,21 +23,27 @@
     </Window.Resources>
 
     <Grid>
+        <!--FocusSink Border-->
         <Border x:Name="FocusSink"
-                Width="0" Height="0"
+                Width="0"
+                Height="0"
                 Focusable="True"
                 Background="Transparent"
-                Opacity="0"/>
+                Opacity="0" />
 
         <Border CornerRadius="26" BorderThickness="8">
+            <!--Gradient Border Trigger-->
             <Border.Triggers>
                 <EventTrigger RoutedEvent="Loaded">
-                    <BeginStoryboard Storyboard="{StaticResource GradientRotateStoryboard}"/>
+                    <BeginStoryboard Storyboard="{StaticResource GradientRotateStoryboard}" />
                 </EventTrigger>
             </Border.Triggers>
 
+            <!--Border Brush-->
             <Border.BorderBrush>
-                <LinearGradientBrush x:Name="AnimatedBorderBrush" StartPoint="-1,0.5" EndPoint="0.5,1">
+                <LinearGradientBrush x:Name="AnimatedBorderBrush"
+                                     StartPoint="-1,0.5"
+                                     EndPoint="0.5,1">
                     <GradientStop Color="#FF71FBF8" Offset="0.00" />
                     <GradientStop Color="LightBlue" Offset="0.30" />
                     <GradientStop Color="#FF71FBF8" Offset="0.55" />
@@ -50,73 +57,115 @@
                 </LinearGradientBrush>
             </Border.BorderBrush>
 
+            <!--Login Form-->
             <Border Background="White" CornerRadius="20">
-
                 <Grid>
+
+                    <!--Definitions-->
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="320"/>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="320" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
+                    <!--Sign-in-->
                     <Grid Grid.Column="0">
+
+                        <!--Martify Logo && Name-->
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="25,25,0,0">
-                            <Image Source="resources/images/Martify.png" Width="60" Height="60" />
-                            <Label Content="Martify"
-                                   FontFamily="{StaticResource PasseroOne}"
+
+                            <!--Marify Logo-->
+                            <Image Source="resources/images/Martify.png"
+                                   Width="60"
+                                   Height="60" />
+
+                            <!--Marify Label Animation/Trigger-->
+                            <Label FontFamily="{StaticResource PasseroOne}"
                                    FontSize="42"
                                    FontWeight="Bold"
                                    VerticalContentAlignment="Center"
-                                   Foreground="Black" 
-                                   Margin="10,0,0,0"/>
+                                   Foreground="Black"
+                                   Margin="10,0,0,0">
+                                <Label.Style>
+                                    <Style TargetType="Label">
+                                        <Setter Property="Content" Value="Martify"></Setter>
+                                        <Style.Triggers>
+                                            <EventTrigger RoutedEvent="Window.Loaded">
+                                                <BeginStoryboard Storyboard="{StaticResource MartifyAnimation}"></BeginStoryboard>
+                                            </EventTrigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Label.Style>
+                            </Label>
                         </StackPanel>
 
+                        <!--Sign-in Panel-->
                         <Grid VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,60,0,0" Width="248">
 
+                            <!--Blur Background-->
                             <Image Source="resources/images/blur_image.png"
                                    Stretch="Fill"
-                                   Width="248" Height="273" />
+                                   Width="248"
+                                   Height="273" />
 
-                            <Border CornerRadius="20" BorderThickness="2" Focusable="False" BorderBrush="Transparent">
-                                <Border Background="Gray" Opacity="0.1" Focusable="False" CornerRadius="17" />
+                            <!--Blur Overlay-->
+                            <Border CornerRadius="20"
+                                    BorderThickness="2"
+                                    Focusable="False"
+                                    BorderBrush="Transparent">
+                                <Border Background="Gray"
+                                        Opacity="0.1"
+                                        Focusable="False"
+                                        CornerRadius="17" />
                             </Border>
 
+                            <!--Sign-in Panel Grid-->
                             <Grid Margin="20,15,20,15">
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
-                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
 
-                                <Label Grid.Row="0" Content="Sign in"
+                                <Label Grid.Row="0"
+                                       Content="Sign in"
                                        Margin="-8,0,0,0"
                                        FontFamily="{StaticResource RubikGlitchPop}"
                                        FontSize="35"
                                        FontWeight="Bold"
                                        VerticalContentAlignment="Center"
-                                       Foreground="#FF055BAC" RenderTransformOrigin="0.5,0.5" >
+                                       Foreground="#FF055BAC"
+                                       RenderTransformOrigin="0.5,0.5">
                                     <Label.RenderTransform>
                                         <TransformGroup>
-                                            <ScaleTransform/>
-                                            <SkewTransform AngleX="23.775"/>
-                                            <RotateTransform/>
-                                            <TranslateTransform X="10.15"/>
+                                            <ScaleTransform />
+                                            <SkewTransform AngleX="23.775" />
+                                            <RotateTransform />
+                                            <TranslateTransform X="10.15" />
                                         </TransformGroup>
                                     </Label.RenderTransform>
                                 </Label>
 
-                                <Label Grid.Row="1" Content="Username or email address"
+                                <Label Grid.Row="1"
+                                       Content="Username or email address"
                                        FontFamily="{StaticResource YanoneKaffeesatz}"
                                        FontSize="16"
-                                       Foreground="Gray" Margin="0,10,0,0" />
+                                       Foreground="Gray"
+                                       Margin="0,10,0,0" />
 
-                                <Grid Grid.Row="2" Margin="0,2,0,0">
-                                    <Border x:Name="usernameBorder" Focusable="False" BorderThickness="1" BorderBrush="Gray" CornerRadius="8" Background="AliceBlue">
+                                <Grid Grid.Row="2"
+                                      Margin="0,2,0,0">
+                                    <Border x:Name="usernameBorder"
+                                            Focusable="False"
+                                            BorderThickness="1"
+                                            BorderBrush="Gray"
+                                            CornerRadius="8"
+                                            Background="AliceBlue">
                                         <Grid>
                                             <TextBox x:Name="usernameTextBox"
                                                      VerticalContentAlignment="Center"
-                                                     Padding="30,0,5,0"  
+                                                     Padding="30,0,5,0"
                                                      Height="30"
                                                      FontFamily="Arial"
                                                      FontSize="12"
@@ -124,12 +173,13 @@
                                                      Background="Transparent"
                                                      Foreground="Black"
                                                      GotFocus="usernameTextBoxGotFocus"
-                                                     LostFocus="usernameTextBoxLostFocus"/>
+                                                     LostFocus="usernameTextBoxLostFocus" />
                                             <Image Source="resources/images/user_icon.png"
                                                    HorizontalAlignment="Left"
-                                                   Width="20" Height="20"
+                                                   Width="20"
+                                                   Height="20"
                                                    Margin="5,0,0,0"
-                                                   IsHitTestVisible="False"/>
+                                                   IsHitTestVisible="False" />
                                         </Grid>
                                     </Border>
                                     <Border x:Name="usernameFocusBorder"
@@ -138,16 +188,24 @@
                                             Visibility="Collapsed"
                                             IsHitTestVisible="False"
                                             Focusable="false"
-                                            BorderBrush="#4b91cf"/>
+                                            BorderBrush="#4b91cf" />
                                 </Grid>
 
-                                <Label Grid.Row="3" Content="Password"
+                                <Label Grid.Row="3"
+                                       Content="Password"
                                        FontFamily="{StaticResource YanoneKaffeesatz}"
                                        FontSize="16"
-                                       Foreground="Gray" Margin="0,10,0,0" />
+                                       Foreground="Gray"
+                                       Margin="0,10,0,0" />
 
-                                <Grid Grid.Row="4" Margin="0,2,0,0">
-                                    <Border x:Name="passwordBorder" Focusable="False" BorderThickness="1" BorderBrush="Gray" CornerRadius="8" Background="AliceBlue">
+                                <Grid Grid.Row="4"
+                                      Margin="0,2,0,0">
+                                    <Border x:Name="passwordBorder"
+                                            Focusable="False"
+                                            BorderThickness="1"
+                                            BorderBrush="Gray"
+                                            CornerRadius="8"
+                                            Background="AliceBlue">
                                         <Grid>
                                             <TextBox x:Name="showPasswordTextBox"
                                                      VerticalContentAlignment="Center"
@@ -160,7 +218,7 @@
                                                      Foreground="Black"
                                                      Visibility="Collapsed"
                                                      GotFocus="passwordBoxGotFocus"
-                                                     LostFocus="passwordBoxLostFocus"/>
+                                                     LostFocus="passwordBoxLostFocus" />
                                             <PasswordBox x:Name="passwordBox"
                                                          VerticalContentAlignment="Center"
                                                          Padding="30,0,35,0"
@@ -171,20 +229,22 @@
                                                          Background="Transparent"
                                                          Foreground="Black"
                                                          GotFocus="passwordBoxGotFocus"
-                                                         LostFocus="passwordBoxLostFocus"/>
+                                                         LostFocus="passwordBoxLostFocus" />
                                             <Image Source="resources/images/key_icon.png"
                                                    HorizontalAlignment="Left"
-                                                   Width="20" Height="20"
+                                                   Width="20"
+                                                   Height="20"
                                                    Margin="5,0,0,0"
-                                                   IsHitTestVisible="False"/>
-                                            <Image x:Name="eyeIcon" 
+                                                   IsHitTestVisible="False" />
+                                            <Image x:Name="eyeIcon"
                                                    Source="resources/images/eye_closed.png"
                                                    HorizontalAlignment="Right"
-                                                   Width="20" Height="20"
+                                                   Width="20"
+                                                   Height="20"
                                                    Margin="0,0,8,0"
                                                    Cursor="Hand"
                                                    Focusable="False"
-                                                   MouseLeftButtonDown="EyeIcon_MouseLeftButtonDown"/>
+                                                   MouseLeftButtonDown="EyeIcon_MouseLeftButtonDown" />
                                         </Grid>
                                     </Border>
                                     <Border x:Name="passwordFocusBorder"
@@ -193,24 +253,44 @@
                                             Visibility="Collapsed"
                                             IsHitTestVisible="False"
                                             Focusable="False"
-                                            BorderBrush="#4b91cf"/>
+                                            BorderBrush="#4b91cf" />
                                 </Grid>
                             </Grid>
                         </Grid>
                     </Grid>
 
+                    <!--Banner Grid-->
                     <Grid Grid.Column="1">
-                        <Image Source="resources/images/login-banner.png" Margin="20,30,10,5"/>
+                        <Image Source="resources/images/login-banner.png"
+                               Margin="20,30,10,5" />
+
+                        <Grid HorizontalAlignment="Right"
+                              VerticalAlignment="Top"
+                              Margin="0"
+                              Width="50"
+                              Height="50">
+                            <Image Source="resources/images/x_icon.png"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"
+                                   Cursor="Hand"
+                                   MouseLeftButtonDown="CloseProgram_Click">
+                                <Image.Style>
+                                    <Style TargetType="Image">
+                                        <Setter Property="Width"
+                                                Value="25" />
+                                        <Style.Triggers>
+                                            <Trigger Property="IsMouseOver"
+                                                     Value="True">
+                                                <Setter Property="Width"
+                                                        Value="30" />
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Image.Style>
+                            </Image>
+                        </Grid>
                     </Grid>
 
-                    <Image Source="resources/images/x_icon.png"
-                           Grid.Column="1"
-                           Margin="0,10,10,0"
-                           Width="30" Height="30"
-                           HorizontalAlignment="Right"
-                           VerticalAlignment="Top"
-                           MouseLeftButtonDown="CloseProgram_Click"
-                           ToolTip="Close Program"/>
                 </Grid>
             </Border>
         </Border>
