--- a/Martify/resources/xaml_resources/TriggerRes.xaml
+++ b/Martify/resources/xaml_resources/TriggerRes.xaml
@@ -1,4 +1,128 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <KeyTime x:Key="time000">0:0:0</KeyTime>
+    <KeyTime x:Key="time001">0:0:0.1</KeyTime>
+    <KeyTime x:Key="time002">0:0:0.2</KeyTime>
+    <KeyTime x:Key="time003">0:0:0.3</KeyTime>
+    <KeyTime x:Key="time004">0:0:0.4</KeyTime>
+    <KeyTime x:Key="time005">0:0:0.5</KeyTime>
+    <KeyTime x:Key="time006">0:0:0.6</KeyTime>
+    <KeyTime x:Key="time007">0:0:0.7</KeyTime>
+    <KeyTime x:Key="time008">0:0:0.8</KeyTime>
+    <KeyTime x:Key="time009">0:0:0.9</KeyTime>
+    <KeyTime x:Key="time010">0:0:1</KeyTime>
+    <KeyTime x:Key="time011">0:0:1.1</KeyTime>
+    <KeyTime x:Key="time012">0:0:1.2</KeyTime>
+    <KeyTime x:Key="time013">0:0:1.3</KeyTime>
+    <KeyTime x:Key="time014">0:0:1.4</KeyTime>
+    <KeyTime x:Key="time015">0:0:1.5</KeyTime>
+    <KeyTime x:Key="time016">0:0:1.6</KeyTime>
+    <KeyTime x:Key="time017">0:0:1.7</KeyTime>
+    <KeyTime x:Key="time018">0:0:1.8</KeyTime>
+    <KeyTime x:Key="time019">0:0:1.9</KeyTime>
+    <KeyTime x:Key="time020">0:0:2</KeyTime>
+    <KeyTime x:Key="time021">0:0:2.1</KeyTime>
+    <KeyTime x:Key="time022">0:0:2.2</KeyTime>
+    <KeyTime x:Key="time023">0:0:2.3</KeyTime>
+    <KeyTime x:Key="time024">0:0:2.4</KeyTime>
+    <KeyTime x:Key="time025">0:0:2.5</KeyTime>
+    <KeyTime x:Key="time026">0:0:2.6</KeyTime>
+    <KeyTime x:Key="time027">0:0:2.7</KeyTime>
+    <KeyTime x:Key="time028">0:0:2.8</KeyTime>
+    <KeyTime x:Key="time029">0:0:2.9</KeyTime>
+    <KeyTime x:Key="time030">0:0:3</KeyTime>
+    <KeyTime x:Key="time031">0:0:3.1</KeyTime>
+    <KeyTime x:Key="time032">0:0:3.2</KeyTime>
+    <KeyTime x:Key="time033">0:0:3.3</KeyTime>
+    <KeyTime x:Key="time034">0:0:3.4</KeyTime>
+    <KeyTime x:Key="time035">0:0:3.5</KeyTime>
+    <KeyTime x:Key="time036">0:0:3.6</KeyTime>
+    <KeyTime x:Key="time037">0:0:3.7</KeyTime>
+    <KeyTime x:Key="time038">0:0:3.8</KeyTime>
+    <KeyTime x:Key="time039">0:0:3.9</KeyTime>
+    <KeyTime x:Key="time040">0:0:4</KeyTime>
+    <KeyTime x:Key="time041">0:0:4.1</KeyTime>
+    <KeyTime x:Key="time042">0:0:4.2</KeyTime>
+    <KeyTime x:Key="time043">0:0:4.3</KeyTime>
+    <KeyTime x:Key="time044">0:0:4.4</KeyTime>
+    <KeyTime x:Key="time045">0:0:4.5</KeyTime>
+    <KeyTime x:Key="time046">0:0:4.6</KeyTime>
+    <KeyTime x:Key="time047">0:0:4.7</KeyTime>
+    <KeyTime x:Key="time048">0:0:4.8</KeyTime>
+    <KeyTime x:Key="time049">0:0:4.9</KeyTime>
+    <KeyTime x:Key="time050">0:0:5</KeyTime>
+    <KeyTime x:Key="time051">0:0:5.1</KeyTime>
+    <KeyTime x:Key="time052">0:0:5.2</KeyTime>
+    <KeyTime x:Key="time053">0:0:5.3</KeyTime>
+    <KeyTime x:Key="time054">0:0:5.4</KeyTime>
+    <KeyTime x:Key="time055">0:0:5.5</KeyTime>
+    <KeyTime x:Key="time056">0:0:5.6</KeyTime>
+    <KeyTime x:Key="time057">0:0:5.7</KeyTime>
+    <KeyTime x:Key="time058">0:0:5.8</KeyTime>
+    <KeyTime x:Key="time059">0:0:5.9</KeyTime>
+    <KeyTime x:Key="time060">0:0:6</KeyTime>
+    <KeyTime x:Key="time061">0:0:6.1</KeyTime>
+    <KeyTime x:Key="time062">0:0:6.2</KeyTime>
+    <KeyTime x:Key="time063">0:0:6.3</KeyTime>
+    <KeyTime x:Key="time064">0:0:6.4</KeyTime>
+    <KeyTime x:Key="time065">0:0:6.5</KeyTime>
+    <KeyTime x:Key="time066">0:0:6.6</KeyTime>
+    <KeyTime x:Key="time067">0:0:6.7</KeyTime>
+    <KeyTime x:Key="time068">0:0:6.8</KeyTime>
+    <KeyTime x:Key="time069">0:0:6.9</KeyTime>
+    <KeyTime x:Key="time070">0:0:7</KeyTime>
+    <KeyTime x:Key="time071">0:0:7.1</KeyTime>
+    <KeyTime x:Key="time072">0:0:7.2</KeyTime>
+    <KeyTime x:Key="time073">0:0:7.3</KeyTime>
+    <KeyTime x:Key="time074">0:0:7.4</KeyTime>
+    <KeyTime x:Key="time075">0:0:7.5</KeyTime>
+    <KeyTime x:Key="time076">0:0:7.6</KeyTime>
+    <KeyTime x:Key="time077">0:0:7.7</KeyTime>
+    <KeyTime x:Key="time078">0:0:7.8</KeyTime>
+    <KeyTime x:Key="time079">0:0:7.9</KeyTime>
+    <KeyTime x:Key="time080">0:0:8</KeyTime>
+    <KeyTime x:Key="time081">0:0:8.1</KeyTime>
+    <KeyTime x:Key="time082">0:0:8.2</KeyTime>
+    <KeyTime x:Key="time083">0:0:8.3</KeyTime>
+    <KeyTime x:Key="time084">0:0:8.4</KeyTime>
+    <KeyTime x:Key="time085">0:0:8.5</KeyTime>
+    <KeyTime x:Key="time086">0:0:8.6</KeyTime>
+    <KeyTime x:Key="time087">0:0:8.7</KeyTime>
+    <KeyTime x:Key="time088">0:0:8.8</KeyTime>
+    <KeyTime x:Key="time089">0:0:8.9</KeyTime>
+    <KeyTime x:Key="time090">0:0:9</KeyTime>
+    <KeyTime x:Key="time091">0:0:9.1</KeyTime>
+    <KeyTime x:Key="time092">0:0:9.2</KeyTime>
+    <KeyTime x:Key="time093">0:0:9.3</KeyTime>
+    <KeyTime x:Key="time094">0:0:9.4</KeyTime>
+    <KeyTime x:Key="time095">0:0:9.5</KeyTime>
+    <KeyTime x:Key="time096">0:0:9.6</KeyTime>
+    <KeyTime x:Key="time097">0:0:9.7</KeyTime>
+    <KeyTime x:Key="time098">0:0:9.8</KeyTime>
+    <KeyTime x:Key="time099">0:0:9.9</KeyTime>
+    <KeyTime x:Key="time100">0:0:10</KeyTime>
+
+    <Storyboard x:Key="MartifyAnimation" Storyboard.TargetProperty="(Label.Content)">
+        <StringAnimationUsingKeyFrames RepeatBehavior="Forever">
+            <DiscreteStringKeyFrame Value="" KeyTime="{StaticResource time000}"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="M" KeyTime="{StaticResource time005}"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Ma" KeyTime="{StaticResource time006}"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Mar" KeyTime="{StaticResource time007}"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Mart" KeyTime="{StaticResource time008}"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Marti" KeyTime="{StaticResource time009}"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Martif" KeyTime="{StaticResource time010}"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Martify" KeyTime="{StaticResource time011}"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Martify" KeyTime="{StaticResource time040}"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Martif" KeyTime="0:0:4.04"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Marti" KeyTime="0:0:4.08"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Mart" KeyTime="0:0:4.12"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Mar" KeyTime="0:0:4.16"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="Ma" KeyTime="0:0:4.2"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="M" KeyTime="0:0:4.24"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="" KeyTime="0:0:4.28"></DiscreteStringKeyFrame>
+            <DiscreteStringKeyFrame Value="" KeyTime="{StaticResource time050}"></DiscreteStringKeyFrame>
+        </StringAnimationUsingKeyFrames>
+    </Storyboard>
     
 </ResourceDictionary>
