--- a/Martify/LoginWindow.xaml
+++ b/Martify/LoginWindow.xaml
@@ -258,8 +258,9 @@
                                             Click="loginButtonClick">
                                         <Button.Background>
                                             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                                                <GradientStop Color="#FF363333" Offset="0.311"/>
-                                                <GradientStop Color="Black" Offset="1"/>
+                                                <GradientStop Color="Black"/>
+                                                <GradientStop Color="#FF0A0A0A" Offset="1"/>
+                                                <GradientStop Color="#FF454545" Offset="0.002"/>
                                             </LinearGradientBrush>
                                         </Button.Background>
                                         <Button.Template>
@@ -270,7 +271,7 @@
                                                         BorderThickness="{TemplateBinding BorderThickness}"
                                                         CornerRadius="10">
                                                     <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                                                                      VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                                                 </Border>
                                                 <ControlTemplate.Triggers>
                                                     <Trigger Property="IsFocused" Value="True">
@@ -282,7 +283,6 @@
                                         </Button.Template>
                                     </Button>
                                 </Grid>
-
                             </Grid>
                         </Grid>
                     </Grid>
