--- a/Martify/App.xaml
+++ b/Martify/App.xaml
@@ -1,6 +1,7 @@
 ﻿<Application x:Class="Martify.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:local="clr-namespace:Martify"
              StartupUri="MainWindow.xaml">
     
