--- a/Martify/Views/Products.xaml
+++ b/Martify/Views/Products.xaml
@@ -5,6 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Martify.Views"
              xmlns:vm="clr-namespace:Martify.ViewModels"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:uc="clr-namespace:Martify.Views"
              mc:Ignorable="d" 
              d:DesignHeight="720" d:DesignWidth="864"
              Style="{StaticResource Page_CinematicFocus_Style}"
@@ -13,40 +15,43 @@
     <UserControl.DataContext>
         <vm:ProductsVM />
     </UserControl.DataContext>
-
     <Grid>
-        <Grid>
-            <Grid>
-                <Grid Width="500" Height="400"
-                      Margin="25,0,0,25"
-                      VerticalAlignment="Bottom"
-                      HorizontalAlignment="Left">
-                    <Border Background="LightBlue"
-                            CornerRadius="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"></RowDefinition>
+            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid Grid.Row="0">
+            <uc:WindowControl></uc:WindowControl>
+        </Grid>
+        <Grid Grid.Row="1"
+              VerticalAlignment="Top"
+              Background="Transparent"
+              Height="50"
+              >
+            <Border
+                Background="white"
+                CornerRadius="15"
+                Margin="5">
 
-                    </Border>
-                </Grid>
-
-                <Grid Width="500" Height="251"
-                      Margin="25,25,0,0"
-                      VerticalAlignment="Top"
-                      HorizontalAlignment="Left">
-                    <Border Background="LightBlue"
-                            CornerRadius="20">
-
-                    </Border>
-                </Grid>
-
-                <Grid Width="300" Height="670"
-                      Margin="539,0,0,0"
-                      VerticalAlignment="Center"
-                      HorizontalAlignment="Left">
-                    <Border Background="LightBlue"
-                            CornerRadius="20">
-
-                    </Border>
-                </Grid>
-            </Grid>
+            </Border>
+            <TextBox
+                VerticalAlignment="Center"
+                materialDesign:HintAssist.Hint="Search..."
+                Margin="50 0 50 5"
+                Height="50"
+                FontSize="18"
+                
+                Style="{StaticResource MaterialDesignFloatingHintTextBox}" />
+            <materialDesign:PackIcon Kind="Magnify"
+                                     VerticalAlignment="Center"
+                                     Height="30" Width="30" Margin="15,0,0,0"
+                                     Opacity="20"
+                                     />
         </Grid>
     </Grid>
+
 </UserControl>
+
+    
