--- a/Martify/Views/SidePanel.xaml
+++ b/Martify/Views/SidePanel.xaml
@@ -62,9 +62,9 @@
                                             HorizontalAlignment="Left"
                                             VerticalAlignment="Center"
                                             Margin="0,0,0,0">
-                                        <Border.Effect>
+                                        <!--<Border.Effect>
                                             <DropShadowEffect Color="#80000000" BlurRadius="5" ShadowDepth="1" Direction="270" Opacity="0.2"/>
-                                        </Border.Effect>
+                                        </Border.Effect>-->
                                     </Border>
                                     
 
